# testrawweb

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
data/: raw-manager.db
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  utils.js
frontend/src/components/: DetailView.jsx  FileCard.jsx
photos/Test/Subfolder/: DSC03606.ARW
src/: db.rs  main.rs  metadata.rs
static/: app.js  index.html  styles.css
